# ddb

./: client.cpp  global.h  local_main.cpp  makefile
excute/: QueryOptimise.cpp  QueryOptimise.h  local_sql_excution.cpp  local_sql_excution.h  main.cpp  main_1.cpp  makefile  site_excution.cpp  site_excution.h
gdd/: gdd.cpp  gdd.h
querytree/: querytree.cpp  querytree.h
rpc/: rpc_receive.cpp  rpc_receive.h  rpc_sent.cpp  rpc_sent.h
socket/: CMakeLists.txt  global.h  main.cpp  rpc_receive.cpp  rpc_receive.h  rpc_sent.cpp  rpc_sent.h
